--- a/my-events.html
+++ b/my-events.html
@@ -6,15 +6,74 @@
   <title>My Events - Hacktracker</title>
   <style>
     .event-card {
-      border: 1px solid #ccc;
-      border-radius: 10px;
-      padding: 15px;
-      margin: 15px 0;
-      max-width: 500px;
+      border: none;
+      border-radius: 16px;
+      padding: 0;
+      background: white;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
+      transition: transform 0.2s ease, box-shadow 0.2s ease;
+      overflow: hidden;
     }
-    img {
+    .event-card:hover {
+      transform: translateY(-4px);
+      box-shadow: 0 8px 24px rgba(0, 0, 0, 0.15);
+    }
+    .event-image {
       width: 100%;
-      max-width: 500px;
+      height: 200px;
+      object-fit: contain;
+      border-radius: 0;
+      background-color: #f8f9fa;
+    }
+    .event-content {
+      padding: 20px;
+    }
+    .event-title {
+      font-size: 24px;
+      font-weight: bold;
+      margin: 0 0 12px 0;
+      color: #2c3e50;
+    }
+    .event-organization {
+      font-size: 16px;
+      color: #007bff;
+      font-weight: 600;
+      margin-bottom: 8px;
+    }
+    .event-date {
+      font-size: 14px;
+      color: #666;
+      margin-bottom: 12px;
+      display: flex;
+      align-items: center;
+    }
+    .event-location {
+      font-size: 14px;
+      color: #666;
+      margin-bottom: 12px;
+      display: flex;
+      align-items: center;
+    }
+    .event-description {
+      font-size: 14px;
+      color: #444;
+      line-height: 1.5;
+      margin-bottom: 16px;
+    }
+    .event-meta {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-top: 16px;
+      border-top: 1px solid #eee;
+      font-size: 12px;
+      color: #888;
+    }
+    .event-participants {
+      background: #f8f9fa;
+      padding: 4px 8px;
+      border-radius: 12px;
+      font-weight: 500;
     }
     .status-badge {
       padding: 4px 8px;
@@ -35,24 +94,71 @@
       background-color: #f8d7da;
       color: #721c24;
     }
+    body {
+      background-color: #f5f7fa;
+      font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, sans-serif;
+    }
+    #eventContainer {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 20px;
+      padding: 0 20px;
+    }
     #authCheck {
       margin: 15px 0;
       padding: 10px;
       background-color: #f8f9fa;
       border-radius: 5px;
     }
+    .page-header {
+      text-align: center;
+      margin: 30px 0;
+      color: #2c3e50;
+    }
+    .events-section {
+      max-width: 1200px;
+      margin: 0 auto;
+      padding: 0 20px;
+    }
+    .events-title {
+      font-size: 28px;
+      color: #2c3e50;
+      margin-bottom: 30px;
+      text-align: center;
+    }
+    @media (max-width: 768px) {
+      #eventContainer {
+        grid-template-columns: 1fr;
+        padding: 0 10px;
+      }
+      .event-content {
+        padding: 16px;
+      }
+      .event-title {
+        font-size: 20px;
+      }
+      .events-section {
+        padding: 0 10px;
+      }
+    }
   </style>
 </head>
 <body>
-  <h1>My Events</h1>
+  <div class="page-header">
+    <h1>My Events</h1>
+    <p>Here are all the events you've submitted</p>
+  </div>
   
   <div id="authCheck" style="display: none;">
     <p>Checking authentication...</p>
   </div>
   
   <div id="myEventsPanel" style="display: none;">
-    <p>Here are all the events you've submitted:</p>
-    <div id="eventContainer">Loading your events...</div>
+    <div class="events-section">
+      <div id="eventContainer">Loading your events...</div>
+    </div>
   </div>
 
   <a href="index.html">Back to the main page</a>
